metadata-classic/objects/WorkItem__c.object
<CustomObject>
    <description>Custom object used to store records for incoming tasks from product allowing end user to review and update outcome of the action completed.</description>
    <fields>
        <fullName>AccountCreationDate__c</fullName>
        <inlineHelpText>The date on which the Linked (matching) Account was created.</inlineHelpText>
        <label>Account Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountHolderNamesMatch__c</fullName>
        <inlineHelpText>Do the names of the account holders on each user match?</inlineHelpText>
        <label>Account Holder Names Match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, but they are similar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AddressMatch__c</fullName>
        <inlineHelpText>Select the level to which the addresses match.</inlineHelpText>
        <label>Address Match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exact Match</fullName>
                </value>
                <value>
                    <fullName>Same ZIP Code</fullName>
                </value>
                <value>
                    <fullName>Same City</fullName>
                </value>
                <value>
                    <fullName>Same State</fullName>
                </value>
                <value>
                    <fullName>No Similarities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdminLinkLoginAsUser__c</fullName>
        <formula>HYPERLINK(&quot;https://www.thumbtack.com/admin/login?usr_user_id=&quot;&amp;TEXT(usr_user_id__c)&amp;&quot;&amp;return_url=/profile/account&quot;, &quot;Log in as &quot;&amp;TEXT(usr_user_id__c))</formula>
        <label>Admin Link Login As User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewUser__c</fullName>
        <formula>IF(NOT ISBLANK(TEXT(usr_user_id__c)), HYPERLINK(&quot;https://www.thumbtack.com/admin/users/user?usr_user_id=&quot;&amp;TEXT(usr_user_id__c), &quot;View User&quot;),
HYPERLINK(&quot;https://www.thumbtack.com/admin/users/user?usr_user_id=&quot;&amp;TEXT(usr_user_id__c), &quot;View User&quot;))</formula>
        <inlineHelpText>Open the Thumbtack Admin tool and navigate to the View User page for the current user.</inlineHelpText>
        <label>Admin Link View User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreTheyRequestingSimilarServices__c</fullName>
        <label>Are They Requesting Similar Services?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssignedDateTime__c</fullName>
        <description>the date and time that the work item is assigned from a queue</description>
        <label>Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AuditorConfidence__c</fullName>
        <inlineHelpText>Other than previously answered questions, are you confident that they are attempting to circumvent a banned account?</inlineHelpText>
        <label>Auditor Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BannedAccountUserID__c</fullName>
        <label>Banned Account User ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannedCompanyNameReferenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banned Company Name Referenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannedUserNameReferenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Banned User Name Referenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BidId__c</fullName>
        <label>Bid ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BidtoReviewTime__c</fullName>
        <description>The elapsed time between the quote and when the time the review was left.</description>
        <label>Bid to Review Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BlacklistValues__c</fullName>
        <description>Truncates the text in the Work Item Name to only show the text after the hyphen (-). Used for reporting purposes in MTS.</description>
        <formula>Right(Name, Len(Name) - Find(&quot;-&quot;, Name) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blacklist Values</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlacklistedNumberKnownDuplicate__c</fullName>
        <description>Email addresses of known duplicates on Blacklisted Number records. Temp solution for duplicates issue.</description>
        <formula>OR(
Email__c = &quot;alexandria.sowell@wagwalking.com&quot;,
Email__c = &quot;david@photovideoservices.net&quot;,
Email__c = &quot;excelconstructionla@gmail.com&quot;,
Email__c = &quot;ontopservice01@gmail.com&quot;,
Email__c = &quot;pickupmoversllc@gmail.com&quot;,
Email__c = &quot;ryanleerhodes@protonmail.com&quot;,
Email__c = &quot;thumbtack@securedata.com&quot;,
Email__c = &quot;chrisschultzpga@gmail.com&quot;, 
Email__c = &quot;djktouch@gmail.com&quot;,
Email__c = &quot;cleanlifellc@gmail.com&quot;,
Email__c = &quot;paragonsolutions2009@gmail.com&quot;,
Email__c = &quot;jrsphoto0513@yahoo.com&quot;,
Email__c = &quot;bryancwatkins@gmail.com&quot;,
Email__c = &quot;joeymaz111@gmail.com&quot;,
Email__c = &quot;whotolukap@aol.com&quot;,
Email__c = &quot;sjpartida@yahoo.com&quot;,
Email__c = &quot;info@rhinomovesyou.com&quot;,
Email__c = &quot;pound4poundconstructionllc@gmail.com&quot;,
Email__c = &quot;aaronrcarr@yahoo.com&quot;,
Email__c = &quot;linainteriors@hotmail.com&quot;,
Email__c = &quot;hlachance86@gmail.com&quot;,
Email__c = &quot;info@stormgrouproofing.com&quot;,
Email__c = &quot;info@giddyuppersonaltraining.com&quot;,
Email__c = &quot;info@awesomefamilyentertainment.com&quot;,
Email__c = &quot;dnselectriccorp@aol.com&quot;,
Email__c = &quot;Marketing@FLpestinfo.com&quot;,
Email__c = &quot;marketing@flpestinfo.com&quot;,
Email__c = &quot;lee@metrorenovationsinc.com&quot;,
Email__c = &quot;bamagladys@charter.net&quot;,
Email__c = &quot;info@5avedesign.com&quot;,
Email__c = &quot;diamantinq@gmail.com&quot;,
Email__c = &quot;thecoxsemail@gmail.com&quot;,
Email__c = &quot;artistictouch.starfive@outlook.com&quot;,
Email__c = &quot;quotes+austin@lawnstarter.com&quot;,
Email__c = &quot;trustflooringinc@gmail.com&quot;,
Email__c = &quot;tonybankhead2999@gmail.com&quot;,
Email__c = &quot;contact@dynamicmovingsolutions.com&quot;,
Email__c = &quot;service@plumbingnerds.com&quot;,
Email__c = &quot;alliedmovingleads@gmail.com&quot;,
Email__c = &quot;mndoffice2@gmail.com&quot;,
Email__c = &quot;LinaInteriors@hotmail.com&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blacklisted Number Known Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blacklistnotificationemailsent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Pro has been automatically notified that their account was blacklisted via email.</inlineHelpText>
        <label>Blacklist notification email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessServiceNameMatch__c</fullName>
        <inlineHelpText>Are the Business/Service Names the same?</inlineHelpText>
        <label>Business/Service Name Match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, but they are similar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeofOutcomeTimeStamp__c</fullName>
        <label>Change of Outcome Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChangeofOwnerTimeStamp__c</fullName>
        <label>Change of Owner Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompletedBY__c</fullName>
        <description>Field recording who completed the work item by work flow rule.</description>
        <label>Completed BY</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedTS__c</fullName>
        <description>Date/Time of when a work item was completed.</description>
        <label>Completed TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConfidenceReason__c</fullName>
        <inlineHelpText>If Previous answer was &quot;Yes&quot;, briefly explain your reasoning</inlineHelpText>
        <label>Confidence Reason</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConfidenceScore__c</fullName>
        <formula>MIN(
((CASE( AccountHolderNamesMatch__c,
&quot;Yes&quot;,50,
&quot;No&quot;,0,
&quot;No, but they are similar&quot;,35,
0)
+
CASE( Profilepicturesmatch__c,
&quot;Yes&quot;,50,
&quot;No&quot;,0,
&quot;No, but they are similar&quot;,35,
0)
+
CASE( EmailAddressSimilarity__c,
&quot;Contains the same/similar identifying name information&quot;, 35,
&quot;Contains the same/similar identifying company information&quot;, 25,
&quot;Not similar&quot;, 0,
0)
+
IF( AccountCreationDate__c -  OriginalAccountCreationDate__c &lt; 0, -10, 0
)
+
IF( AccountCreationDate__c - OriginalAccountActionDate__c &lt; 0, 0,
 IF( AccountCreationDate__c - OriginalAccountActionDate__c &lt; 2, 30,
  IF( AccountCreationDate__c - OriginalAccountActionDate__c &lt; 7, 20,
   IF( AccountCreationDate__c - OriginalAccountActionDate__c &lt; 14, 15,
    IF(AccountCreationDate__c - OriginalAccountActionDate__c &gt;=14, 10,0)))))
+
CASE( ServiceCategoryMatch__c,
&quot;Yes&quot;, 20,
&quot;No&quot;, -10,
0)
+
CASE( AddressMatch__c,
&quot;Exact Match&quot;,50,
&quot;Same ZIP Code&quot;,25,
&quot;Same City&quot;,20,
&quot;Same State&quot;,10,
&quot;No Similarities&quot;,0,
0)
+
CASE( NumberofPhoneNumberMatches__c,
&quot;0&quot;,0,
&quot;1&quot;,40,
&quot;2&quot;,50,
&quot;3+&quot;,60,
0)
+
CASE( BusinessServiceNameMatch__c,
&quot;Yes&quot;,50,
&quot;No&quot;,0,
&quot;No, but they are similar&quot;,35,
0)
+
(
IF(NumberofIPMatches__c = 0, 0,
IF(NumberofIPMatches__c = 1, 35,
IF(NumberofIPMatches__c = 2, 40,
IF(NumberofIPMatches__c &gt;=3, 45,
0))))
)
+
IF(AND(BannedUserNameReferenced__c,BannedCompanyNameReferenced__c,PhoneNumberReferenced__c),50,
 IF(AND(BannedUserNameReferenced__c,BannedCompanyNameReferenced__c),40,
  IF(AND(BannedCompanyNameReferenced__c,PhoneNumberReferenced__c),40,
   IF(AND(BannedUserNameReferenced__c,PhoneNumberReferenced__c),40,
    IF(PhoneNumberReferenced__c,30,
     IF(BannedCompanyNameReferenced__c,15,
      IF(BannedUserNameReferenced__c,25,0)))))))
+
CASE( DegreesofLink__c,
&quot;1 (Linked directly to original banned user)&quot;,0,
&quot;2 (Linked to an account that was removed for being linked to a banned user)&quot;,-10,
&quot;3+ (Linked to 2 or more accounts before being linked to the original banned user)&quot;,-20,
0)
+
CASE( AuditorConfidence__c,
&quot;Yes&quot;,100,
&quot;No&quot;,0,
0))
/275),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidence Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <description>Formula to bring in the time the record was created; used in list views and reports.</description>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DayofWeek__c</fullName>
        <label>Day of Week</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysSinceAccountCreated__c</fullName>
        <description>Number of days since the pro&apos;s/customer account was created in admin.</description>
        <label>Days Since Account Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DegreesofLink__c</fullName>
        <inlineHelpText>How many degrees away from the original banned account?</inlineHelpText>
        <label>Degrees of Link</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 (Linked directly to original banned user)</fullName>
                </value>
                <value>
                    <fullName>2 (Linked to an account that was removed for being linked to a banned user)</fullName>
                </value>
                <value>
                    <fullName>3+ (Linked to 2 or more accounts before being linked to the original banned user)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeviceIDFingerprintMatch__c</fullName>
        <label>Device ID/Fingerprint Match</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisputeReason__c</fullName>
        <label>Dispute Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QuotePrice</fullName>
                    <label>Quote Price</label>
                </value>
                <value>
                    <fullName>ServiceRequested</fullName>
                    <label>Service Requested</label>
                </value>
                <value>
                    <fullName>DateRequested</fullName>
                    <label>Date Requested</label>
                </value>
                <value>
                    <fullName>LocationRequested</fullName>
                    <label>Location Requested</label>
                </value>
                <value>
                    <fullName>InappropriateRequest</fullName>
                    <label>Inappropriate Request</label>
                </value>
                <value>
                    <fullName>LowIntent</fullName>
                    <label>Low Intent</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>LowIntent-Any</fullName>
                    <label>Low Intent - Any</label>
                </value>
                <value>
                    <fullName>LowIntent-Me</fullName>
                    <label>Low Intent - Me</label>
                </value>
                <value>
                    <fullName>LowIntent-AlreadyHired</fullName>
                    <label>Low Intent - Already Hired</label>
                </value>
                <value>
                    <fullName>LowIntent-NoResponse</fullName>
                    <label>Low Intent - No Response</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailAddressSimilarity__c</fullName>
        <label>Email Address Similarity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contains the same/similar identifying name information</fullName>
                </value>
                <value>
                    <fullName>Contains the same/similar identifying company information</fullName>
                </value>
                <value>
                    <fullName>Not similar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailAddressesSimilar__c</fullName>
        <label>Email Addresses Similar?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailAlertsSent__c</fullName>
        <description>Field to store the email template name of workflow rule email alerts sent from the record.</description>
        <label>Email Alerts Sent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnrollmentCallbackCampaign__c</fullName>
        <description>The campaign of the work item (e.g., lcpn = campaign from request a call page); populated via url parameters.</description>
        <label>Enrollment Callback Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentCallbackSource__c</fullName>
        <description>The original source of the work item (e.g., lsrc = lead source from request a call page); populated via url parameters.</description>
        <label>Enrollment Callback Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPMatch__c</fullName>
        <label>IP Match?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalNotes__c</fullName>
        <description>Optional notes field to add details for other agents that may touch the work item. Passed over to case if a case gets created from the work item.</description>
        <inlineHelpText>Optional notes field to add details for other agents that may touch the work item. Passed over to case if a case gets created from the work item.</inlineHelpText>
        <label>Internal Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <description>Auto generated number to serve as a reference ticket number for the work item.</description>
        <displayFormat>WI-{0000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ManagedAccount__c</fullName>
        <formula>ProAccount__r.ManagedAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageBody__c</fullName>
        <label>Message Body</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NameMatchOrSimilar__c</fullName>
        <label>Name Match or Similar?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoRefundEmailText__c</fullName>
        <description>Returns a text snippet for use in an email template based on the value in DisputeReason__c</description>
        <formula>CASE(DisputeReason__c,
&quot;QuotePrice&quot;, &quot;based on your quote sheets, the price looks correct. The best thing to do is check the information in your settings and make any changes.&quot;,
&quot;ServiceRequested&quot;, &quot;based on your job preferences, it looks like you do this type of job. The best thing to do is check the information in your settings and make any changes.&quot;,
&quot;DateRequested&quot;, &quot;based on your availability calendar, you look like you&apos;re free. The best thing to do is check the information in your settings and make any changes.&quot;,
&quot;LocationRequested&quot;, &quot;based on your job preferences, it looks like you travel to this location. The best thing to do is check the information in your settings and make any changes.&quot;,
&quot;InappropriateRequest&quot;, &quot;the request doesn&apos;t seem inappropriate.&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Refund Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofIPMatches__c</fullName>
        <inlineHelpText>How many IP addresses match between the blacklisted and linked accounts?</inlineHelpText>
        <label>Number of IP Matches</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofPhoneNumberMatches__c</fullName>
        <inlineHelpText>How many phone numbers match between the blacklisted and linked account?</inlineHelpText>
        <label>Number of Phone Number Matches</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalAccountActionDate__c</fullName>
        <inlineHelpText>When was the original account actioned (deleted or blacklisted)?</inlineHelpText>
        <label>Original Account Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalAccountCreationDate__c</fullName>
        <inlineHelpText>The date the original (blacklisted) account was created.</inlineHelpText>
        <label>Original Account Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote credits refunded</fullName>
                </value>
                <value>
                    <fullName>Disable and added to Caveo</fullName>
                </value>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>No Warning Sent: Previous Concerning Review Warning</fullName>
                </value>
                <value>
                    <fullName>No Action Needed</fullName>
                </value>
                <value>
                    <fullName>Warn and Flag</fullName>
                </value>
                <value>
                    <fullName>Immediate MI Action Needed</fullName>
                </value>
                <value>
                    <fullName>Warned and Flagged</fullName>
                </value>
                <value>
                    <fullName>Sent to MI</fullName>
                </value>
                <value>
                    <fullName>No Warning Sent: Due to Open MI Case</fullName>
                </value>
                <value>
                    <fullName>No action taken</fullName>
                </value>
                <value>
                    <fullName>Accurate - Actioned</fullName>
                </value>
                <value>
                    <fullName>Accurate - No action</fullName>
                </value>
                <value>
                    <fullName>Inaccurate</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Dispute Accepted and Refunded</fullName>
                </value>
                <value>
                    <fullName>Dispute Rejected</fullName>
                </value>
                <value>
                    <fullName>Pro removed</fullName>
                </value>
                <value>
                    <fullName>Warned</fullName>
                </value>
                <value>
                    <fullName>Removed - Payback option</fullName>
                </value>
                <value>
                    <fullName>Removed - Final</fullName>
                </value>
                <value>
                    <fullName>Accurate - Sexual Request</fullName>
                </value>
                <value>
                    <fullName>Accurate - Offensive Language</fullName>
                </value>
                <value>
                    <fullName>Accurate - Spammy Message</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Related to an Open MTS Incident</fullName>
                </value>
                <value>
                    <fullName>Email sent to customer</fullName>
                </value>
                <value>
                    <fullName>Case sent to MTS</fullName>
                </value>
                <value>
                    <fullName>Accurate - Inappropriate Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerIsQueue__c</fullName>
        <description>True if owner is queue, false if owner is user</description>
        <formula>BEGINS(OwnerId,&quot;00G&quot;)</formula>
        <label>Owner Is Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhoneNumberMatch__c</fullName>
        <label>Phone Number Match?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ThumbtackUserType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhoneNumberReferenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Number Referenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PotentialManagedAccount__c</fullName>
        <formula>ProAccount__r.PotentialManagedAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Managed Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pro Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Items (Pro Account)</relationshipLabel>
        <relationshipName>Work_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProUserIdAsText__c</fullName>
        <formula>Text(usr_user_id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro User Id as Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profilepicturesmatch__c</fullName>
        <label>Profile pictures match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, but they are similar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemoveAccount__c</fullName>
        <formula>IF(
TEXT( PhoneNumberMatch__c) = &apos;&apos; &amp;&amp; 
TEXT( NameMatchOrSimilar__c ) = &apos;&apos; &amp;&amp; 
TEXT( EmailAddressesSimilar__c) = &apos;&apos; &amp;&amp; 
TEXT( IPMatch__c) = &apos;&apos; &amp;&amp; 
TEXT( AreTheyRequestingSimilarServices__c) = &apos;&apos; &amp;&amp;
TEXT( RequestingInSameArea__c) = &apos;&apos; &amp;&amp;
TEXT( SendingSimilarMessages__c) = &apos;&apos;, &quot;&quot;,
IF(  
TEXT( PhoneNumberMatch__c) = &apos;Yes&apos; || 
TEXT( NameMatchOrSimilar__c ) = &apos;Yes&apos; || 
TEXT( EmailAddressesSimilar__c) = &apos;Yes&apos; || 
TEXT( IPMatch__c) = &apos;Yes&apos; || 
TEXT( AreTheyRequestingSimilarServices__c) = &apos;Yes&apos; ||
TEXT( RequestingInSameArea__c) = &apos;Yes&apos; ||
TEXT( SendingSimilarMessages__c) = &apos;Yes&apos;, &quot;Yes&quot;, &quot;No&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remove Account?</label>
        <type>Text</type>
    </fields>
</CustomObject>